Fixing folder links

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     <header>
         <div class="flex">
             <div class="logo">
-                <a href="/index.html"><img src="/images/uc-logo-gold.png" alt="Logo"></a>
+                <a href="/index.html"><img src="images/uc-logo-gold.png" alt="Logo"></a>
             </div>
             <nav>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/hangman.html">Hangman</a></li>
-                <li><a href="/jump.html">Jump Game</a></li>
-                <li><a href="/memory.html">Memory</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="hangman.html">Hangman</a></li>
+                <li><a href="jump.html">Jump Game</a></li>
+                <li><a href="memory.html">Memory</a></li>
             </nav>
         </div>
     </header> 
@@ -62,8 +62,8 @@
             <h1>Arcade Games</h1>
             <div class="flex">
                 <div class="box">
-                    <a href="/hangman.html">
-                        <img src="/images/hangman_background.png" alt="Hangman Game Image">
+                    <a href="hangman.html">
+                        <img src="images/hangman_background.png" alt="Hangman Game Image">
                         <div class="box-description">
                             <h4>Hangman</h4>
                             <p>Guess letters to reveal the word before the time runs out, you have 6 tries!</p>
@@ -73,7 +73,7 @@
 
                 <div class="box">
                     <a href="/jump.html">
-                        <img src="/images/jump_background.png" alt="Cow Jump Game Image"/>
+                        <img src="images/jump_background.png" alt="Cow Jump Game Image"/>
                         <div class="box-description">
                             <h4>Run Cow Run!</h4>
                             <p>Inspired by the Chrome Dinosaur game, help the cow jump over obstacles to avoid extinction!</p>
@@ -83,7 +83,7 @@
 
                 <div class="box">
                     <a href="memory.html">
-                        <img src="/images/memory_background.png" alt="Matching Game Image"/>
+                        <img src="images/memory_background.png" alt="Matching Game Image"/>
                         <div class="box-description">
                             <h4>Matching Game</h4>
                             <p>Find the matching pairs before time runs out!</p>
