removed initial "/" for folders

--- a/jump.html
+++ b/jump.html
@@ -9,8 +9,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/jump_game.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/jump_game.css">
 
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favico.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,13 +24,13 @@
     <header>
     <div class="flex">
         <div class="logo">
-            <a href="/index.html"><img src="/images/uc-logo-gold.png" alt="Logo"></a>
+            <a href="index.html"><img src="/images/uc-logo-gold.png" alt="Logo"></a>
         </div>
         <nav>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/hangman.html">Hangman</a></li>
-            <li><a href="/jump.html">Jump Game</a></li>
-            <li><a href="/memory.html">Memory</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="hangman.html">Hangman</a></li>
+            <li><a href="jump.html">Jump Game</a></li>
+            <li><a href="memory.html">Memory</a></li>
         </nav>
     </div>
     </header> 
@@ -45,10 +45,10 @@
         
         <div class="game">
             <div id="character">
-                <img src="/jump_img/cow.png" alt="cow" class="cow">
+                <img src="jump_img/cow.png" alt="cow" class="cow">
             </div>
             <div id="block">
-                <img src="/jump_img/wood.png" alt="wood tunk" class="wood">
+                <img src="jump_img/wood.png" alt="wood tunk" class="wood">
             </div>
         </div>
         <h1 id="btns" onclick="this.style.display='none';sta()">
