removed initial "/" for folders

--- a/memory.html
+++ b/memory.html
@@ -22,13 +22,13 @@
     <header>
         <div class="flex">
             <div class="logo">
-                <a href="/index.html"><img src="/images/uc-logo-gold.png" alt="Logo"></a>
+                <a href="index.html"><img src="images/uc-logo-gold.png" alt="Logo"></a>
             </div>
             <nav>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/hangman.html">Hangman</a></li>
-                <li><a href="/jump.html">Jump Game</a></li>
-                <li><a href="/memory.html">Memory</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="hangman.html">Hangman</a></li>
+                <li><a href="jump.html">Jump Game</a></li>
+                <li><a href="memory.html">Memory</a></li>
             </nav>
         </div>
     </header> 
