removed initial "/" for folders

--- a/hangman.html
+++ b/hangman.html
@@ -11,7 +11,7 @@
     <header>
         <div class="flex">
             <div class="logo">
-                <a href="/index.html"><img src="/images/uc-logo-gold.png" alt="Logo"></a>
+                <a href="index.html"><img src="images/uc-logo-gold.png" alt="Logo"></a>
             </div>
             <nav>
                 <li><a href="index.html">Home</a></li>
