removed initial "/" for folders

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
 
                 <div class="box">
-                    <a href="/jump.html">
+                    <a href="jump.html">
                         <img src="images/jump_background.png" alt="Cow Jump Game Image"/>
                         <div class="box-description">
                             <h4>Run Cow Run!</h4>
