--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <main>
         <section id="img">
             <div class="marketing-text">
-                <h1> UC <span> DAVIS </span> ACRADE</h1>
+                <h1> UC <span> DAVIS </span> ARCADE</h1>
             </div>
         </section>
 
